Nav drawer basic + format stats numbers